--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,7 +33,6 @@ jobs:
           conda install mantidworkbench
           conda install --file requirements-conda.txt --file requirements-dev-conda.txt
           pip install tox-gh-actions==2.12.0
-          # pip install https://oncat.ornl.gov/packages/pyoncat-1.5.1-py3-none-any.whl
 
       - name: Lint with Tox
         if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION }}
@@ -88,32 +87,33 @@ jobs:
           if [ "${IS_RC}" = "true" ]; then CONDA_LABEL="rc"; fi
           anaconda upload --label $CONDA_LABEL noarch/*.tar.bz2
 
-#  trigger-deploy:
-#    runs-on: ubuntu-22.04
-#    needs: [linux]
-#    # only trigger deploys from protected branches and tags
-#    if: ${{ github.ref_protected || github.ref_type == 'tag' }}
-#    steps:
-#      - name: Determine Environment
-#        uses: neutrons/branch-mapper@v2
-#        id: conda_env_name
-#        with:
-#          prefix: mantidtotalscattering
-#
-#      - name: Trigger deploy
-#        id: trigger
-#        uses: eic/trigger-gitlab-ci@v2
-#        with:
-#          url: https://code.ornl.gov
-#          token: ${{ secrets.GITLAB_TRIGGER_TOKEN }}
-#          project_id: 7835
-#          ref_name: main
-#          variables: |
-#            PLAY="update"
-#            CONDA_ENV="${{ steps.conda_env_name.outputs.name }}"
-#
-#      - name: Annotate commit
-#        uses: peter-evans/commit-comment@v2
-#        with:
-#          body: |
-#            GitLab pipeline for ${{ steps.conda_env_name.outputs.name }} has been submitted for this commit: ${{ steps.trigger.outputs.web_url }}
+  trigger-deploy:
+    runs-on: ubuntu-22.04
+    needs: [linux]
+    # only trigger deploys from protected branches and tags
+    if: ${{ github.ref_protected || github.ref_type == 'tag' }}
+    if: false
+    steps:
+      - name: Determine Environment
+        uses: neutrons/branch-mapper@v2
+        id: conda_env_name
+        with:
+          prefix: mantidtotalscattering
+
+      - name: Trigger deploy
+        id: trigger
+        uses: eic/trigger-gitlab-ci@v2
+        with:
+          url: https://code.ornl.gov
+          token: ${{ secrets.GITLAB_TRIGGER_TOKEN }}
+          project_id: 7835
+          ref_name: main
+          variables: |
+            PLAY="update"
+            CONDA_ENV="${{ steps.conda_env_name.outputs.name }}"
+
+      - name: Annotate commit
+        uses: peter-evans/commit-comment@v2
+        with:
+          body: |
+            GitLab pipeline for ${{ steps.conda_env_name.outputs.name }} has been submitted for this commit: ${{ steps.trigger.outputs.web_url }}
